--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     padding: 0 1rem;
+    font-size: .8rem;
 
     .navLink {
         text-transform: uppercase;
