--- a/styles/global.scss
+++ b/styles/global.scss
@@ -15,3 +15,20 @@ body {
     font-family: $font-family-open-sans;
     background-color: $Light_Gray;
 }
+
+.pl-lg {
+    padding-left: 8rem;
+}
+
+.pr-md {
+    padding-right: 5rem;
+}
+
+.pr-sm {
+    padding-right: 2rem;
+}
+
+.carousel-img {
+    width: auto !important;  
+    height: 60vh !important;
+}
