--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -8,11 +8,17 @@
   padding: 1.5rem;
   font-size: 0.8em;
   background-color: $Light_Blue;
+  margin-top: 2rem;
 
   .logoContainer {
       display: flex;
       flex-direction: column;
       align-items: center;
       text-align: center;
+
+      img {
+        width: 100px;
+        height: auto;
+    }
   }
 }
