--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,7 +1,13 @@
 @import "../../styles/variables";
 
+.logoContainer {
+    img {
+        width: 150px;
+        height: auto;
+    }
+}
 .nav {
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     padding: 0 1rem;
