--- a/components/Section/Section.module.scss
+++ b/components/Section/Section.module.scss
@@ -1,26 +1,67 @@
 @import "../../styles/variables";
 
 .section {
-    min-height: 100vh;
-    padding: 2rem 0;
+    min-height: 40vh;
+    padding: 4rem 0;
+    //position: relative;
 
-    .sectionTitle {
-        color: $Blue;
-    }
+    .sectionContent {
+        /*position: absolute;
+        height: 100%;
+        display: inline-block;*/
 
-    .sectionDescription {
-        padding-top: 1rem;
-    }
+        .sectionTitle {
+            color: $Blue;
+        }
+    
+        .sectionDescription {
+            padding-top: 1rem;
+        }
+    
+        .blueContainer {
+            background-color: $Light_Blue;
+    
+            &.right {
+                border-radius: $border-radius-default 0 0 $border-radius-default;
+                -webkit-box-shadow: -5px 4px 15px 2px rgba(94,94,94,0.4); 
+                box-shadow: -5px 4px 15px 2px rgba(94,94,94,0.4);
+                
+            }
+    
+            &.left {
+                border-radius: 0 $border-radius-default $border-radius-default 0;
+                -webkit-box-shadow: 5px 4px 15px 2px rgba(94, 94, 94, 0.4); 
+                box-shadow: 5px 4px 15px 2px rgba(94,94,94,0.4);
+            }
 
-    .blueContainer {
-        background-color: $Light_Blue;
-
-        &.right {
-            border-radius: $border-radius-default 0 0 $border-radius-default;
+            &.center {
+                border-radius: $border-radius-default;
+                -webkit-box-shadow: 5px 4px 15px 2px rgba(94, 94, 94, 0.4); 
+                box-shadow: 5px 4px 15px 2px rgba(94,94,94,0.4);
+            }
         }
 
-        &.left {
-            border-radius: 0 $border-radius-default $border-radius-default 0;
+        .orangeContainer {
+            background-color: $Light_Orange;
+    
+            &.right {
+                border-radius: $border-radius-default 0 0 $border-radius-default;
+                -webkit-box-shadow: -5px 4px 15px 2px rgba(94,94,94,0.4); 
+                box-shadow: -5px 4px 15px 2px rgba(94,94,94,0.4);
+                
+            }
+    
+            &.left {
+                border-radius: 0 $border-radius-default $border-radius-default 0;
+                -webkit-box-shadow: 5px 4px 15px 2px rgba(94, 94, 94, 0.4); 
+                box-shadow: 5px 4px 15px 2px rgba(94,94,94,0.4);
+            }
+
+            &.center {
+                border-radius: $border-radius-default;
+                -webkit-box-shadow: 5px 4px 15px 2px rgba(94, 94, 94, 0.4); 
+                box-shadow: 5px 4px 15px 2px rgba(94,94,94,0.4);
+            }
         }
     }
 }
