[add] text content

--- a/components/Section/Section.module.scss
+++ b/components/Section/Section.module.scss
@@ -16,6 +16,7 @@
     
         .sectionDescription {
             padding-top: 1rem;
+            line-height: 1.7rem;
         }
     
         .blueContainer {
