[add] carousel images

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -36,8 +36,8 @@ a, a:hover, a:focus, a:active {
 }
 
 .carousel-img {
-    width: auto !important;  
-    height: 60vh !important;
+    width: 500px !important;  
+    height: auto !important;
 }
 
 .circle {
