--- a/styles/global.scss
+++ b/styles/global.scss
@@ -98,5 +98,10 @@ a, a:hover, a:focus, a:active {
 
 img {
     width: 100%;
-    height: auto;
+    height: auto;  
+}
+
+.img-xs {
+    width: 100%;
+    height: 50px;
   }
